@@ -6,4 +6,4 @@ Spionageabwehr
 Einstellbar: Alertbox wenn/kurz bevor Countdown abgelaufen ist
 Imperiumsübersicht-ähnliche Funktion einbauen.
 Roboter-, Schiffs- und Verteidigungsbau auf Performance hin umstrukturieren
-Nachrichten automatisch löschen.
+Nachrichtenarchivierungssystem.
