@@ -135,6 +135,17 @@
 		6 => 'Stationieren'
 	);
 
+	$message_type_times = array (
+		1 => 3,
+		2 => 3,
+		3 => 2,
+		4 => 2,
+		5 => 1,
+		6 => 5,
+		7 => 4,
+		8 => 2
+	);
+
 	$types_message_types = array(1=>5, 2=>4, 3=>1, 4=>3, 5=>2, 6=>3);
 
 	########################################
